# mlwins

./: README.md
carla-shard-descriptor/Tensorflow_CARLA/director/: director_config.yaml
carla-shard-descriptor/Tensorflow_CARLA/envoy/: env_dai.py  envoy_config_one.yaml  envoy_config_two.yaml  envoy_dai_2dbb.py  envoy_dai_2dbb_VOC.py  envoy_dai_3dbb.py  sd_requirements.txt  shard_descriptor.py  shard_descriptor_real.py  start_envoy.sh
carla-shard-descriptor/Tensorflow_CARLA/workspace/: Tensorflow_CARLA.ipynb  preprocessing.py  requirements.txt  utils.py
controller/: controller.py  mlSimConnector.py  mlsimInterfaceMsgs_pb2.py  mlwinsSimConfig.yaml  netSimConnector.py  netsimInterfaceMsgs_pb2.py  physicsSimConnector.py
messages/: mlsimInterfaceMsgs.proto  netsimInterfaceMsgs.proto
ml-frameworks/federated-learning/: openFLv1.3.patch
network-simulators/: instructions.txt
network-simulators/netsim-interface/: CMakeLists.txt  README.md
network-simulators/netsim-interface/doc/: netsim-interface.rst
network-simulators/netsim-interface/examples/: CMakeLists.txt  netsim-interface-example.cc
network-simulators/netsim-interface/helper/: netsim-interface-helper.cc  netsim-interface-helper.h
network-simulators/netsim-interface/model/: netsim-interface.cc  netsim-interface.h  wave_server.cc  wave_server.h
network-simulators/netsim-interface/test/: netsim-interface-test-suite.cc
